--- a/src/styles/partials/_people.scss
+++ b/src/styles/partials/_people.scss
@@ -1,5 +1,5 @@
 .people {
-  padding-bottom: 20px;
+  padding-bottom: 0;
 
   p {
     display: flex;
